--- a/index.html
+++ b/index.html
@@ -611,9 +611,7 @@
                     const pointsInput = document.createElement('input');
                     pointsInput.type = 'number';
                     pointsInput.id = 'winnerPoints';
-                    pointsInput.placeholder = '90';
-                    pointsInput.min = '50';
-                    pointsInput.max = '120';
+                    pointsInput.placeholder = 'ex. 90';
                     
                     pointsDiv.appendChild(pointsLabel);
                     pointsDiv.appendChild(pointsInput);
@@ -636,9 +634,7 @@
                     const pointsInput = document.createElement('input');
                     pointsInput.type = 'number';
                     pointsInput.id = 'relegationPoints';
-                    pointsInput.placeholder = '35';
-                    pointsInput.min = '20';
-                    pointsInput.max = '50';
+                    pointsInput.placeholder = 'ex. 35';
                     
                     pointsDiv.appendChild(pointsLabel);
                     pointsDiv.appendChild(pointsInput);
