--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
             </div>
             
             <div class="button-group">
-                <button class="btn btn-random" onclick="randomizeTable()">🎲 Random Prediction</button>
+                <!-- <button class="btn btn-random" onclick="randomizeTable()">🎲 Random Prediction</button> -->
                 <button class="btn btn-generate" onclick="generateTable()">📊 Generate Table</button>
                 <button class="btn btn-clear" onclick="safeClearAll()">🗑️ Clear All</button>
             </div>
